--- a/crates/rooibos-dom/Cargo.toml
+++ b/crates/rooibos-dom/Cargo.toml
@@ -23,6 +23,9 @@ futures = "0.3"
 rustc-hash = "2"
 terminput = { git = "https://github.com/aschey/terminput", rev = "fa983c79b62568ddd8d440717d80257dbe34221b" }
 
+[target.'cfg(target_arch = "wasm32")'.dependencies]
+wasm-bindgen = { version = "0.2", features = ["enable-interning"] }
+
 [features]
 nightly = ["reactive_graph/nightly", "tachys/nightly"]
 crossterm = ["terminput/crossterm"]
