--- a/crates/rooibos-runtime/Cargo.toml
+++ b/crates/rooibos-runtime/Cargo.toml
@@ -17,6 +17,7 @@ tracing = "0.1"
 derivative = "2"
 termwiz = { version = "0.22.0", optional = true }
 tokio-util = "0.7"
+once_cell = "1"
 
 [target.'cfg(unix)'.dependencies]
 termion = { version = "4", optional = true }
