dynamic_tabs tests

--- a/crates/rooibos-tester/Cargo.toml
+++ b/crates/rooibos-tester/Cargo.toml
@@ -8,3 +8,4 @@ ratatui = { version = "0.27" }
 rooibos-runtime = { path = "../rooibos-runtime" }
 tokio = { version = "1.38.0", default-features = false, features = ["time"] }
 rooibos-dom = { path = "../rooibos-dom" }
+unicode-width = "0.1.13"
