add terminal widget

--- a/crates/rooibos/Cargo.toml
+++ b/crates/rooibos/Cargo.toml
@@ -43,3 +43,4 @@ xterm-js = ["rooibos-xterm-js"]
 default = ["crossterm"]
 ssh = ["rooibos-ssh"]
 input-search = ["rooibos-components/input-search"]
+terminal-widget = ["rooibos-components/terminal-widget"]
