--- a/crates/rooibos-components/Cargo.toml
+++ b/crates/rooibos-components/Cargo.toml
@@ -23,9 +23,15 @@ tokio = { version = "1", default-features = false, features = ["sync"] }
 once_cell = "1"
 tracing = "0.1"
 
+[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
+tui-term = { version = "0.1.12", optional = true }
+vt100 = { version = "0.15", optional = true }
+portable-pty = { version = "0.8", optional = true }
+
 [features]
 nightly = ["reactive_graph/nightly", "tachys/nightly"]
 crossterm = ["dep:crossterm", "tui-textarea/crossterm"]
 termion = ["tui-textarea/termion"]
 termwiz = ["tui-textarea/termwiz"]
 input-search = ["tui-textarea/search"]
+terminal-widget = ["tui-term", "vt100", "portable-pty"]
