--- a/examples/Cargo.toml
+++ b/examples/Cargo.toml
@@ -5,7 +5,7 @@ edition = "2021"
 
 [dependencies]
 crossterm = "0.27"
-rooibos = { path = "../crates/rooibos", features = ["ssh"] }
+rooibos = { path = "../crates/rooibos", features = ["ssh", "terminal-widget"] }
 tokio = { version = "1.38.0", features = ["rt-multi-thread", "macros"] }
 tracing = "0.1.40"
 tilia = { git = "https://github.com/aschey/tilia", rev = "694a370d7e08e28884d468567a0671afe90a827d", features = [
