--- a/crates/rooibos-runtime/Cargo.toml
+++ b/crates/rooibos-runtime/Cargo.toml
@@ -18,6 +18,9 @@ derivative = "2"
 termwiz = { version = "0.22.0", optional = true }
 tokio-util = "0.7"
 once_cell = "1"
+wasm-compat = { git = "https://github.com/aschey/wasm-compat", rev = "34097fbe8e34cd1d5105b1a4aaf7c04822197422", features = [
+    "all",
+] }
 
 [target.'cfg(unix)'.dependencies]
 termion = { version = "4", optional = true }
