add image component

--- a/crates/rooibos-components/Cargo.toml
+++ b/crates/rooibos-components/Cargo.toml
@@ -18,10 +18,12 @@ rooibos-runtime = { path = "../rooibos-runtime" }
 url = "2"
 derivative = "2"
 ratatui = { version = "0.27", default-features = false }
-tui-textarea = { git = "https://github.com/aschey/tui-textarea", rev = "cc952b1b68a1d8090ca1bbda2567f6140c8a8a96", default-features = false }
+tui-textarea = { version = "0.5", default-features = false, optional = true }
 tokio = { version = "1", default-features = false, features = ["sync"] }
 once_cell = "1"
 tracing = "0.1"
+ratatui-image = { version = "1.0.3", optional = true }
+image = { version = "0.25", optional = true }
 
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
 tui-term = { version = "0.1.12", optional = true }
@@ -30,8 +32,10 @@ portable-pty = { version = "0.8", optional = true }
 
 [features]
 nightly = ["reactive_graph/nightly", "tachys/nightly"]
-crossterm = ["dep:crossterm", "tui-textarea/crossterm"]
-termion = ["tui-textarea/termion"]
-termwiz = ["tui-textarea/termwiz"]
+crossterm = ["dep:crossterm", "tui-textarea?/crossterm"]
+termion = ["tui-textarea?/termion"]
+termwiz = ["tui-textarea?/termwiz"]
 input-search = ["tui-textarea/search"]
 terminal-widget = ["tui-term", "vt100", "portable-pty"]
+image = ["dep:image", "dep:ratatui-image"]
+input = ["dep:tui-textarea"]
