--- a/examples/Cargo.toml
+++ b/examples/Cargo.toml
@@ -5,7 +5,12 @@ edition = "2021"
 
 [dependencies]
 crossterm = "0.27"
-rooibos = { path = "../crates/rooibos", features = ["ssh", "terminal-widget"] }
+rooibos = { path = "../crates/rooibos", features = [
+    "ssh",
+    "terminal-widget",
+    "input",
+    "image",
+] }
 tokio = { version = "1.38.0", features = ["rt-multi-thread", "macros"] }
 tracing = "0.1.40"
 tilia = { git = "https://github.com/aschey/tilia", rev = "694a370d7e08e28884d468567a0671afe90a827d", features = [
@@ -16,8 +21,8 @@ tracing-subscriber = { version = "0.3.18", features = [
     "env-filter",
 ] }
 rand = "0.8.5"
-tui-textarea = { git = "https://github.com/aschey/tui-textarea", rev = "cc952b1b68a1d8090ca1bbda2567f6140c8a8a96" }
-tui-tree-widget = { git = "https://github.com/aschey/tui-rs-tree-widget", rev = "b91f51a8277e842aa88f6e3a326c8609e078f9a3" }
+tui-textarea = "0.5.0"
+tui-tree-widget = "0.21.0"
 reqwest = { version = "0.12.4", features = ["json"] }
 serde = "1.0.203"
 axum = "0.7.5"
