--- a/crates/rooibos-dom/Cargo.toml
+++ b/crates/rooibos-dom/Cargo.toml
@@ -22,7 +22,7 @@ derivative = "2"
 futures = "0.3"
 rustc-hash = "2"
 terminput = { git = "https://github.com/aschey/terminput", rev = "85e84fb29e77ee9c26ed09c80ca1eec002a75c55" }
-tui-textarea = { version = "0.5", default-features = false }
+tui-textarea = { version = "0.5", optional = true, default-features = false }
 
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
@@ -30,7 +30,8 @@ wasm-bindgen = { version = "0.2", features = ["enable-interning"] }
 
 [features]
 nightly = ["reactive_graph/nightly", "tachys/nightly"]
-crossterm = ["terminput/crossterm"]
-termion = ["terminput/termion"]
-termwiz = ["terminput/termwiz"]
+crossterm = ["terminput/crossterm", "tui-textarea?/crossterm"]
+termion = ["terminput/termion", "tui-textarea?/termion"]
+termwiz = ["terminput/termwiz", "tui-textarea?/termwiz"]
+input = ["tui-textarea"]
 default = ["crossterm"]
