--- a/crates/rooibos/Cargo.toml
+++ b/crates/rooibos/Cargo.toml
@@ -44,5 +44,5 @@ default = ["crossterm"]
 ssh = ["rooibos-ssh"]
 input-search = ["rooibos-components/input-search"]
 terminal-widget = ["rooibos-components/terminal-widget"]
-input = ["rooibos-components/input"]
+input = ["rooibos-components/input", "rooibos-dom/input"]
 image = ["rooibos-components/image"]
