--- a/crates/rooibos-runtime/Cargo.toml
+++ b/crates/rooibos-runtime/Cargo.toml
@@ -53,9 +53,16 @@ tokio = { version = "1.38.1", default-features = false, features = [
     "process",
 ] }
 
+[target.'cfg(not(windows))'.dependencies]
+base64 = { version = "0.22.1", optional = true }
+
+[target.'cfg(windows)'.dependencies]
+clipboard-win = { version = "5.4", features = ["std"], optional = true }
+
 [features]
 default = ["crossterm"]
 crossterm = ["dep:crossterm", "ratatui/crossterm"]
 termion = ["dep:termion", "ratatui/termion"]
 nightly = ["reactive_graph/nightly"]
 termwiz = ["dep:termwiz", "ratatui/termwiz"]
+clipboard = ["dep:base64", "clipboard-win"]
