downgrade packages temporarily for crossterm compatibility

--- a/crates/rooibos-dom/Cargo.toml
+++ b/crates/rooibos-dom/Cargo.toml
@@ -21,8 +21,8 @@ bitflags = "2"
 derivative = "2"
 futures = "0.3"
 rustc-hash = "2"
-terminput = { git = "https://github.com/aschey/terminput", rev = "0eeca408b9eadf5dca616a8473454488877ecf3e" }
-tui-textarea = { git = "https://github.com/aschey/tui-textarea", rev = "c72fea065b69d08bf15c199a564368f65ba7656b", optional = true, default-features = false }
+terminput = { git = "https://github.com/aschey/terminput", rev = "85e84fb29e77ee9c26ed09c80ca1eec002a75c55" }
+tui-textarea = { version = "0.5.2", optional = true, default-features = false }
 paste = "1"
 
 
