--- a/examples/Cargo.toml
+++ b/examples/Cargo.toml
@@ -29,6 +29,7 @@ reqwest = { version = "0.12.4", features = ["json"] }
 serde = "1.0.203"
 axum = "0.7.5"
 tokio-stream = { version = "0.1.15", features = ["sync"] }
+clap = { version = "4.5.13", features = ["derive"] }
 
 [dev-dependencies]
 insta = "1.39.0"
