--- a/crates/rooibos-components/Cargo.toml
+++ b/crates/rooibos-components/Cargo.toml
@@ -8,7 +8,7 @@ reactive_graph = { path = "../../../leptos/reactive_graph", features = [
     "tracing",
     "effects",
 ] }
-crossterm = { version = "0.27", optional = true }
+crossterm = { version = "0.28.1", optional = true }
 tachys = { path = "../../../leptos/tachys", features = ["reactive_graph"] }
 next_tuple = { path = "../../../leptos/next_tuple" }
 either_of = { path = "../../../leptos/either_of" }
@@ -18,7 +18,7 @@ rooibos-runtime = { path = "../rooibos-runtime" }
 url = "2"
 derivative = "2"
 ratatui = { version = "0.27", default-features = false }
-tui-textarea = { version = "0.5.2", default-features = false, optional = true }
+tui-textarea = { git = "https://github.com/aschey/tui-textarea", rev = "c72fea065b69d08bf15c199a564368f65ba7656b", default-features = false, optional = true }
 tokio = { version = "1", default-features = false, features = ["sync"] }
 tracing = "0.1"
 ratatui-image = { version = "1.0.5", optional = true }
