--- a/examples/Cargo.toml
+++ b/examples/Cargo.toml
@@ -23,8 +23,8 @@ tracing-subscriber = { version = "0.3.18", features = [
     "env-filter",
 ] }
 rand = "0.8.5"
-tui-textarea = { git = "https://github.com/aschey/tui-textarea", rev = "c72fea065b69d08bf15c199a564368f65ba7656b" }
-tui-tree-widget = "0.21.0"
+tui-textarea = { version = "0.6" }
+tui-tree-widget = "0.22.0"
 reqwest = { version = "0.12.4", features = ["json"] }
 serde = "1.0.203"
 axum = "0.7.5"
