--- a/crates/rooibos-runtime/Cargo.toml
+++ b/crates/rooibos-runtime/Cargo.toml
@@ -20,9 +20,10 @@ tracing = "0.1"
 derivative = "2"
 termwiz = { version = "0.22.0", optional = true }
 tokio-util = "0.7"
-wasm-compat = { git = "https://github.com/aschey/wasm-compat", rev = "84c52ad6b049e169ca7f7c0a566ba45817cb31dd", features = [
+wasm-compat = { git = "https://github.com/aschey/wasm-compat", rev = "98287ef1046e4c8694e0b90fbb0d0986573a1969", features = [
     "all",
 ] }
+background-service = { git = "https://github.com/aschey/background-service-rs", rev = "719b0302567ddcdc82ecc03903bc08cc6a6763b8" }
 
 [target.'cfg(unix)'.dependencies]
 termion = { version = "4", optional = true }
