--- a/crates/rooibos/Cargo.toml
+++ b/crates/rooibos/Cargo.toml
@@ -13,6 +13,7 @@ rooibos-runtime = { path = "../rooibos-runtime" }
 rooibos-runtime-macros = { path = "../rooibos-runtime-macros" }
 rooibos-components = { path = "../rooibos-components" }
 rooibos-component-macros = { path = "../rooibos-component-macros" }
+rooibos-config = { path = "../rooibos-config" }
 rooibos-tester = { path = "../rooibos-tester" }
 rooibos-ssh = { path = "../rooibos-ssh", optional = true }
 rooibos-xterm-js = { path = "../rooibos-xterm-js", optional = true }
