--- a/examples/Cargo.toml
+++ b/examples/Cargo.toml
@@ -11,6 +11,7 @@ rooibos = { path = "../crates/rooibos", features = [
     "input",
     "image",
     "clipboard",
+    "config",
 ] }
 tokio = { version = "1.38.1", features = ["rt-multi-thread", "macros"] }
 tracing = "0.1.40"
@@ -31,6 +32,7 @@ axum = "0.7.5"
 tokio-stream = { version = "0.1.15", features = ["sync"] }
 clap = { version = "4.5.13", features = ["derive"] }
 schematic = { version = "0.17" }
+futures-cancel = { git = "https://github.com/aschey/futures-cancel", rev = "d2c20b78ff5c9e85aa892b51971cc1c1b6b22351" }
 
 [dev-dependencies]
 insta = "1.39.0"
