--- a/examples/Cargo.toml
+++ b/examples/Cargo.toml
@@ -12,6 +12,7 @@ rooibos = { path = "../crates/rooibos", features = [
     "image",
     "clipboard",
     "config",
+    "router",
 ] }
 tokio = { version = "1.38.1", features = ["rt-multi-thread", "macros"] }
 tracing = "0.1.40"
