--- a/crates/rooibos-dom/Cargo.toml
+++ b/crates/rooibos-dom/Cargo.toml
@@ -27,7 +27,8 @@ paste = "1"
 wasm-compat = { git = "https://github.com/aschey/wasm-compat", rev = "98287ef1046e4c8694e0b90fbb0d0986573a1969", features = [
     "all",
 ] }
-
+taffy = "0.5.2"
+crossterm = { version = "0.28.1", features = ["event-stream", "use-dev-tty"] }
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
 wasm-bindgen = { version = "0.2", features = ["enable-interning"] }
