--- a/examples/Cargo.toml
+++ b/examples/Cargo.toml
@@ -16,10 +16,9 @@ rooibos = { path = "../crates/rooibos", features = [
 ] }
 tokio = { version = "1.38.1", features = ["rt-multi-thread", "macros"] }
 tracing = "0.1.40"
-tilia = { git = "https://github.com/aschey/tilia", rev = "694a370d7e08e28884d468567a0671afe90a827d", features = [
-    "ipc",
+any_spawner = { git = "https://github.com/leptos-rs/leptos", rev = "c5dea52e69fd1c1c83c0c089d1c73692ed2b4fea", features = [
+    "tokio",
 ] }
-any_spawner = { path = "../../leptos/any_spawner", features = ["tokio"] }
 tracing-subscriber = { version = "0.3.18", features = [
     "registry",
     "env-filter",
