--- a/crates/rooibos-ssh/Cargo.toml
+++ b/crates/rooibos-ssh/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-crossterm = { version = "0.28.1", optional = true }
+crossterm = { version = "0.28.1" }
 russh-keys = "0.44"
 russh = "0.44"
 rooibos-runtime = { path = "../rooibos-runtime" }
@@ -23,5 +23,4 @@ terminput = { git = "https://github.com/aschey/terminput", rev = "0eeca408b9eadf
 futures-cancel = { git = "https://github.com/aschey/futures-cancel", rev = "d2c20b78ff5c9e85aa892b51971cc1c1b6b22351" }
 
 [features]
-crossterm = ["dep:crossterm"]
 clipboard = ["rooibos-runtime/clipboard"]
