gracefully shut down ssh clients when the server closes

--- a/crates/rooibos-ssh/Cargo.toml
+++ b/crates/rooibos-ssh/Cargo.toml
@@ -5,8 +5,8 @@ edition = "2021"
 
 [dependencies]
 crossterm = { version = "0.28.1" }
-russh-keys = "0.44"
-russh = "0.44"
+russh-keys = "0.45"
+russh = "0.45"
 rooibos-runtime = { path = "../rooibos-runtime" }
 rooibos-dom = { path = "../rooibos-dom" }
 tokio = { version = "1.38.1", default-features = false, features = ["sync"] }
@@ -14,6 +14,7 @@ ratatui = { version = "0.28", default-features = false }
 tracing = "0.1"
 tap = "1"
 futures = "0.3"
+async-signal = "0.2"
 async-trait = "0.1"
 reactive_graph = { git = "https://github.com/leptos-rs/leptos", rev = "c5dea52e69fd1c1c83c0c089d1c73692ed2b4fea", features = [
     "tracing",
@@ -21,6 +22,7 @@ reactive_graph = { git = "https://github.com/leptos-rs/leptos", rev = "c5dea52e6
 ] }
 terminput = { git = "https://github.com/aschey/terminput", rev = "0eeca408b9eadf5dca616a8473454488877ecf3e" }
 futures-cancel = { git = "https://github.com/aschey/futures-cancel", rev = "d2c20b78ff5c9e85aa892b51971cc1c1b6b22351" }
+background-service = { git = "https://github.com/aschey/background-service-rs", rev = "2d4f0dd65c86b50585827cd12adaa57de3f8b214" }
 
 [features]
 clipboard = ["rooibos-runtime/clipboard"]
