--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -18,7 +18,9 @@ jobs:
       - name: Build all
         run: cargo build
       - name: Test
-        run: RUST_BACKTRACE=1 cargo test --examples
+        env:
+          RUST_BACKTRACE: 1
+        run: cargo test --examples
   all-features-unix:
     strategy:
       matrix:
