--- a/crates/rooibos-runtime/Cargo.toml
+++ b/crates/rooibos-runtime/Cargo.toml
@@ -16,7 +16,7 @@ reactive_graph = { git = "https://github.com/leptos-rs/leptos", rev = "c5dea52e6
 ] }
 ratatui = { version = "0.28", default-features = false }
 tracing = "0.1"
-derivative = "2"
+educe = "0.6"
 termwiz = { version = "0.22.0", optional = true }
 tokio-util = "0.7"
 wasm-compat = { git = "https://github.com/aschey/wasm-compat", rev = "98287ef1046e4c8694e0b90fbb0d0986573a1969", features = [
