--- a/crates/rooibos-runtime/Cargo.toml
+++ b/crates/rooibos-runtime/Cargo.toml
@@ -46,6 +46,7 @@ console_error_panic_hook = "0.1"
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
 any_spawner = { git = "https://github.com/leptos-rs/leptos", rev = "ceff827a7791cc49c859ed56ecf806e6ec27635b", features = [
     "tokio",
+    "tracing",
 ] }
 signal-hook = "0.3"
 async-signal = "0.2"
