decouple reactivity from dom

--- a/crates/rooibos-dom2/Cargo.toml
+++ b/crates/rooibos-dom2/Cargo.toml
@@ -1,25 +1,25 @@
 [package]
-name = "rooibos-dom"
+name = "rooibos-dom2"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-reactive_graph = { git = "https://github.com/leptos-rs/leptos", rev = "a083b57260db4fa6588ff392bf24b4422047c0f6", features = [
-    "tracing",
-    "effects",
-] }
-tachys = { git = "https://github.com/leptos-rs/leptos", rev = "a083b57260db4fa6588ff392bf24b4422047c0f6", features = [
-    "reactive_graph",
-    "tracing",
-] }
-any_spawner = { git = "https://github.com/leptos-rs/leptos", rev = "a083b57260db4fa6588ff392bf24b4422047c0f6", features = [
-    "tokio",
-    "tracing",
-] }
-throw_error = { git = "https://github.com/leptos-rs/leptos", rev = "a083b57260db4fa6588ff392bf24b4422047c0f6" }
-next_tuple = { git = "https://github.com/leptos-rs/leptos", rev = "a083b57260db4fa6588ff392bf24b4422047c0f6" }
+# reactive_graph = { git = "https://github.com/leptos-rs/leptos", rev = "73f0207a7d7002a5ca73b5bd578624abe17e0056", features = [
+#     "tracing",
+#     "effects",
+# ] }
+# tachys = { git = "https://github.com/leptos-rs/leptos", rev = "73f0207a7d7002a5ca73b5bd578624abe17e0056", features = [
+#     "reactive_graph",
+#     "tracing",
+# ] }
+# any_spawner = { git = "https://github.com/leptos-rs/leptos", rev = "73f0207a7d7002a5ca73b5bd578624abe17e0056", features = [
+#     "tokio",
+#     "tracing",
+# ] }
+throw_error = { git = "https://github.com/leptos-rs/leptos", rev = "73f0207a7d7002a5ca73b5bd578624abe17e0056" }
+next_tuple = { git = "https://github.com/leptos-rs/leptos", rev = "73f0207a7d7002a5ca73b5bd578624abe17e0056" }
 ratatui = { version = "0.28", features = ["unstable"] }
 slotmap = "1"
 tokio = { version = "1.38.1", default-features = false, features = ["sync"] }
@@ -41,7 +41,6 @@ tracing = "0.1"
 wasm-bindgen = { version = "0.2", features = ["enable-interning"] }
 
 [features]
-nightly = ["reactive_graph/nightly", "tachys/nightly"]
 crossterm = ["terminput/crossterm", "tui-textarea?/crossterm"]
 termion = ["terminput/termion", "tui-textarea?/termion"]
 termwiz = ["terminput/termwiz", "tui-textarea?/termwiz"]
