--- a/crates/rooibos-ssh/Cargo.toml
+++ b/crates/rooibos-ssh/Cargo.toml
@@ -8,7 +8,7 @@ crossterm = { version = "0.28.1" }
 russh-keys = "0.45"
 russh = "0.45"
 rooibos-runtime = { path = "../rooibos-runtime" }
-rooibos-dom = { path = "../rooibos-dom" }
+rooibos-dom = { path = "../rooibos-dom2" }
 tokio = { version = "1.38.1", default-features = false, features = ["sync"] }
 ratatui = { version = "0.28", default-features = false }
 tracing = "0.1"
