--- a/crates/rooibos-reactive/Cargo.toml
+++ b/crates/rooibos-reactive/Cargo.toml
@@ -6,20 +6,20 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-reactive_graph = { git = "https://github.com/leptos-rs/leptos", rev = "a083b57260db4fa6588ff392bf24b4422047c0f6", features = [
+reactive_graph = { git = "https://github.com/leptos-rs/leptos", rev = "73f0207a7d7002a5ca73b5bd578624abe17e0056", features = [
     "tracing",
     "effects",
 ] }
-tachys = { git = "https://github.com/leptos-rs/leptos", rev = "a083b57260db4fa6588ff392bf24b4422047c0f6", features = [
+tachys = { git = "https://github.com/leptos-rs/leptos", rev = "73f0207a7d7002a5ca73b5bd578624abe17e0056", features = [
     "reactive_graph",
     "tracing",
 ] }
-any_spawner = { git = "https://github.com/leptos-rs/leptos", rev = "a083b57260db4fa6588ff392bf24b4422047c0f6", features = [
+any_spawner = { git = "https://github.com/leptos-rs/leptos", rev = "73f0207a7d7002a5ca73b5bd578624abe17e0056", features = [
     "tokio",
     "tracing",
 ] }
-throw_error = { git = "https://github.com/leptos-rs/leptos", rev = "a083b57260db4fa6588ff392bf24b4422047c0f6" }
-next_tuple = { git = "https://github.com/leptos-rs/leptos", rev = "a083b57260db4fa6588ff392bf24b4422047c0f6" }
+throw_error = { git = "https://github.com/leptos-rs/leptos", rev = "73f0207a7d7002a5ca73b5bd578624abe17e0056" }
+next_tuple = { git = "https://github.com/leptos-rs/leptos", rev = "73f0207a7d7002a5ca73b5bd578624abe17e0056" }
 rooibos-dom = { path = "../rooibos-dom2" }
 ratatui = { version = "0.28", features = ["unstable"] }
 slotmap = "1"
@@ -28,7 +28,6 @@ bitflags = "2"
 educe = "0.6"
 futures = "0.3"
 rustc-hash = "2"
-terminput = { git = "https://github.com/aschey/terminput", rev = "0eeca408b9eadf5dca616a8473454488877ecf3e" }
 tui-textarea = { version = "0.6", optional = true, default-features = false }
 paste = "1"
 wasm-compat = { git = "https://github.com/aschey/wasm-compat", rev = "98287ef1046e4c8694e0b90fbb0d0986573a1969", features = [
@@ -43,8 +42,8 @@ wasm-bindgen = { version = "0.2", features = ["enable-interning"] }
 
 [features]
 nightly = ["reactive_graph/nightly", "tachys/nightly"]
-crossterm = ["terminput/crossterm", "tui-textarea?/crossterm"]
-termion = ["terminput/termion", "tui-textarea?/termion"]
-termwiz = ["terminput/termwiz", "tui-textarea?/termwiz"]
+crossterm = ["rooibos-dom/crossterm", "tui-textarea?/crossterm"]
+termion = ["rooibos-dom/termion", "tui-textarea?/termion"]
+termwiz = ["rooibos-dom/termwiz", "tui-textarea?/termwiz"]
 input = ["tui-textarea"]
 default = ["crossterm"]
